@@ -2,6 +2,13 @@ I'm tring to follow Semantic Versioning 2.0.0
 http://semver.org/
 
 =V0.0.0=
+2015-02-18
+* finally got UI functional along with retested broadcasting
+** had problem of javascript variable references not going through broadcast in json
+** which is perfectly normal
+** so I added some ID fields and split out the addXXX functions for the object functions
+** and created separate objects for the player, team, game objects
+
 2015-02-17
 * integrating bootstrap css for design
 * working on UI, menus, back buttons, etc
